# crystal-cryptal

./: .gitignore  Cargo.toml  DESIGN.md  README.md  SAW_SPEC_GEN_INTEGRATION.md  SDEP.cry  check_links.ps1  pipeline.ps1  regen.ps1
.beads/: issues.jsonl  metadata.json
.githooks/: pre-commit  pre-commit.ps1
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: 01-coverage-clarity.md  04-publishing.md  usage.md
docs/design/: 01-coverage-clarity.md  02-coverage-ledger.md
examples/: README.md  fetch.ps1
src/: ast.rs  cryptol.lalrpop  describe.rs  ir.rs  lexer.rs  lib.rs  linkcheck.rs  linker.rs  main.rs  parser.rs  render_json.rs  render_md.rs  saw_log.rs
src/cli/: assets.rs  bundle.rs  coverage.rs  extra_docs.rs  functions.rs  mod.rs  pipeline.rs  saw_adapt.rs
src/coverage/: config.rs  inventory.rs  ledger.rs  mod.rs  render.rs  tests.rs
src/ir/: manifest.rs  mod.rs  tests.rs
src/lexer/: layout.rs  merge.rs  mod.rs  preprocess.rs  raw.rs  tests.rs
src/linker/: call_graph.rs  mod.rs  resolve.rs  tests.rs  util.rs
src/parser/: branches.rs  decls.rs  mod.rs  post.rs  sections.rs  tests.rs  text.rs
src/render_md/: categories.rs  docfx.rs  equivalence.rs  fns_index.rs  functions.rs  index.rs  mermaid.rs  mod.rs  proof.rs  properties.rs  signature.rs  single_file.rs  types.rs  util.rs
tests/: snapshots.rs
tests/fixtures/: coverage.toml  implementation_inventory.json  proof_manifest.json
tests/snapshots/: snapshots__coverage_fn_hmac_sha256.snap  snapshots__coverage_index.snap  snapshots__coverage_matrix.snap  (+15 more)
(+4 files in other folders)
