[package]
name = "pretty-specs"
version = "0.5.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
logos = "0.15"
lalrpop-util = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
miette = { version = "7", features = ["fancy"] }
regex = "1"
convert_case = "0.7"

[build-dependencies]
lalrpop = "0.22"

[dev-dependencies]
insta = "1"
